Prepare java 17