@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.ui.oauth;
 
 import static javax.servlet.http.HttpServletResponse.SC_FORBIDDEN;
@@ -6,7 +21,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
@@ -44,8 +58,8 @@ public class MissingScopesErrorDecoder implements ResponseExceptionMapper<Missin
             }
             log.trace("www-authenticate found: {}", wwwAuthenticate);
 
-            List<String> wwwAuthenticateEntries = wwwAuthenticate.stream().map(value -> value.split(","))
-                    .flatMap(Arrays::stream).map(String::trim).collect(Collectors.toList());
+            var wwwAuthenticateEntries = wwwAuthenticate.stream().map(value -> value.split(","))
+                    .flatMap(Arrays::stream).map(String::trim).toList();
             if (wwwAuthenticateEntries.stream().anyMatch(entry -> entry.equalsIgnoreCase("error=\"insufficient_scope\"")
                     || entry.equalsIgnoreCase("Bearer error=\"insufficient_scope\""))) {
                 var missingScopesEntry = wwwAuthenticateEntries.stream()
@@ -85,6 +99,6 @@ public class MissingScopesErrorDecoder implements ResponseExceptionMapper<Missin
     private static List<String> filterHeader(MultivaluedMap<String, Object> headers) {
         return headers.entrySet().stream().filter(entry -> entry.getKey().equalsIgnoreCase(WWW_AUTHENTICATE_HEADER_KEY))
                 .map(Map.Entry::getValue).flatMap(Collection::stream).filter(value -> value instanceof String)
-                .map(value -> (String) value).collect(Collectors.toList());
+                .map(value -> (String) value).toList();
     }
 }
