@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.ui.runtime.application.templating;
 
 import static de.cuioss.portal.ui.api.PortalCoreBeanNames.MULTI_VIEW_MAPPER_BEAN_NAME;
@@ -80,7 +95,7 @@ public class PortalViewMapper implements MultiViewMapper {
         }
         if (log.isDebugEnabled()) {
             final var viewMapDebug = new StringBuilder("Resulting view map:\r");
-            viewMap.forEach((key, value) -> viewMapDebug.append(String.format("%-30s -> %s\r", key, value.getPath())));
+            viewMap.forEach((key, value) -> viewMapDebug.append("%-30s -> %s\r".formatted(key, value.getPath())));
             log.debug(viewMapDebug.toString());
         }
     }
