@@ -1,13 +1,26 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.ui.runtime.page;
 
 import static de.cuioss.portal.ui.api.ui.pages.LoginPage.KEY_USERNAME;
 import static de.cuioss.portal.ui.api.ui.pages.LoginPage.KEY_USERSTORE;
 
 import java.io.Serializable;
-import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.Dependent;
 import javax.inject.Inject;
@@ -84,8 +97,8 @@ public class LoginPageHistoryManagerProviderImpl implements LoginPageHistoryMana
     @Override
     public ViewIdentifier getCurrentViewExcludeUserStoreAndUserName() {
         var currentView = getWrapped().getCurrentView();
-        final List<UrlParameter> newParams = currentView.getUrlParameters().stream()
-                .filter(excludeUserStoreAndUserName()).collect(Collectors.toList());
+        final var newParams = currentView.getUrlParameters().stream()
+                .filter(excludeUserStoreAndUserName()).toList();
         return new ViewIdentifier(currentView.getViewId(), currentView.getOutcome(), newParams);
     }
 
