@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.portal.ui.test.tests;
 
 import static de.cuioss.tools.collect.CollectionLiterals.mutableList;
@@ -5,7 +20,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.enterprise.inject.Instance;
 import javax.inject.Inject;
@@ -58,6 +72,6 @@ public class PortalNavigationMenuItemsTest {
         if (vetoAnnotationOptional.isPresent()) {
             vetoedClasses.addAll(mutableList(vetoAnnotationOptional.get().value()));
         }
-        return instances.stream().filter(item -> !vetoedClasses.contains(item.getClass())).collect(Collectors.toList());
+        return instances.stream().filter(item -> !vetoedClasses.contains(item.getClass())).toList();
     }
 }
